package br.com.logistica.calculo;

import br.com.logistica.model.Entrega;

public interface CalculadoraFrete {
    double calcular(Entrega entrega);
} 
