package br.com.logistica.exception; 
public class LogisticaException extends RuntimeException { 
    public LogisticaException(String message) { super(message); } 
} 
