package br.com.logistica.model; 
public enum TipoFrete { EXPRESSO, PADRAO, ECONOMICO }
