@startuml

' ==== ESTILO GERAL (DARK-FRIENDLY, TUDO LEGÍVEL) ====
top to bottom direction
skinparam linetype ortho
skinparam shadowing false
skinparam roundcorner 12

skinparam BackgroundColor #0d1117
skinparam ArrowColor #9ca3af

' ===== Pacotes =====
skinparam package {
  BackgroundColor #020617
  BorderColor #4b5563
  FontColor #e5e7eb
  FontStyle bold
}

' ===== Classes =====
skinparam class {
  BackgroundColor #111827
  BorderColor #9ca3af
  FontColor #e5e7eb               ' Nome da classe
}
skinparam ClassAttributeFontColor #e5e7eb   ' Métodos/atributos

' ===== Interfaces =====
skinparam interface {
  BackgroundColor #020617
  BorderColor #38bdf8
  FontColor #e5e7eb                ' Nome da interface
}
skinparam InterfaceAttributeFontColor #e5e7eb

' ===== Records (entity) =====
skinparam entity {
  BackgroundColor #111827
  BorderColor #facc15
  FontColor #e5e7eb
}
skinparam EntityAttributeFontColor #e5e7eb

' ===== Enums =====
skinparam enum {
  BackgroundColor #111827
  BorderColor #f97316
  FontColor #e5e7eb
}
skinparam EnumAttributeFontColor #e5e7eb

' ===== Estereótipos (<<interface>>, <<record>>, <<enumeration>>) =====
skinparam stereotypeFontColor #e5e7eb
skinparam classStereotypeFontColor #e5e7eb
skinparam interfaceStereotypeFontColor #e5e7eb
skinparam enumStereotypeFontColor #e5e7eb
skinparam entityStereotypeFontColor #e5e7eb
skinparam stereotypeFontStyle plain

' ===========================
' PACOTES DE PRODUÇÃO
' ===========================
package "Domínio" {
  entity Entrega <<record>> {
    + Entrega(String, double, TipoFrete, String)
    + peso(): double
    + tipoFrete(): TipoFrete
    + endereco(): String
    + destinatario(): String
  }

  enum TipoFrete <<enumeration>> {
    - TipoFrete()
    + valueOf(String): TipoFrete
    + values(): TipoFrete[]
  }
}

package "Cálculo" {
  interface CalculadoraFrete <<interface>> {
    + calcular(Entrega): double
  }

  class FretePadrao {
    + FretePadrao()
    + calcular(Entrega): double
  }

  class FreteExpresso {
    + FreteExpresso()
    + calcular(Entrega): double
  }

  class FreteEconomico {
    + FreteEconomico()
    + calcular(Entrega): double
  }

  class CalculadoraFreteDecorator {
    + CalculadoraFreteDecorator(CalculadoraFrete)
  }

  class PromocaoPesoLeve {
    + PromocaoPesoLeve(CalculadoraFrete)
    + calcular(Entrega): double
  }
}

package "Apresentação" {
  interface FormatadorEtiqueta <<interface>> {
    + formatar(Entrega, double): String
  }

  class FormatadorTextoPadrao {
    + FormatadorTextoPadrao()
    + formatar(Entrega, double): String
  }

  class FormatadorJSON {
    + FormatadorJSON()
    + formatar(Entrega, double): String
  }
}

package "Serviços / Factory" {
  class EtiquetaService {
    + EtiquetaService()
    + EtiquetaService(FormatadorEtiqueta)
    + gerar(Entrega): String
  }

  class CalculadoraFreteFactory {
    + CalculadoraFreteFactory()
    + criar(TipoFrete): CalculadoraFrete
  }
}

package "Exceções" {
  class LogisticaException {
    + LogisticaException(String)
  }

  class DadosInvalidosException {
    + DadosInvalidosException(String)
  }
}

' ===========================
' HERANÇA / IMPLEMENTAÇÃO
' ===========================

' Domínio
Entrega "1" --> "1" TipoFrete

' Cálculo
CalculadoraFrete <|.. FretePadrao
CalculadoraFrete <|.. FreteExpresso
CalculadoraFrete <|.. FreteEconomico
CalculadoraFrete <|.. CalculadoraFreteDecorator
CalculadoraFreteDecorator <|-- PromocaoPesoLeve

' Apresentação
FormatadorEtiqueta <|.. FormatadorTextoPadrao
FormatadorEtiqueta <|.. FormatadorJSON

' Exceções
LogisticaException <|-- DadosInvalidosException

' ===========================
' ASSOCIAÇÕES (USO)
' ===========================

EtiquetaService --> Entrega
EtiquetaService --> FormatadorEtiqueta
EtiquetaService --> CalculadoraFreteFactory

CalculadoraFreteFactory --> TipoFrete
CalculadoraFreteFactory --> CalculadoraFrete

FormatadorTextoPadrao --> Entrega
FormatadorJSON --> Entrega

PromocaoPesoLeve --> CalculadoraFrete

@enduml
